--- a/index.html
+++ b/index.html
@@ -3,7 +3,29 @@
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
+		<link rel="stylesheet" type="text/css" href="css/common.css"/>
 	</head>
 	<body>
+		<header id="head">
+			<!--页面头-->
+			<div class="head">
+				<div class="center clearfix">
+					<div class="left">好的生活，没那么贵</div>
+					<div class="right">
+						<ul>
+							<li><a href="#">登陆</a></li>
+							<li><a href="#">注册</a></li>
+							<li><a href="#">我的订单</a></li>
+							<li><a href="#">会员</a></li>
+							<li><a href="#">甄选家</a></li>
+							<li><a href="#">企业采购</a></li>
+							<li><a href="#">客户服务</a></li>
+							<li><a href="#">APP</a></li>
+						</ul>
+					</div>
+				</div>
+				
+			</div>
+		</header>
 	</body>
 </html>
