--- a/index.html
+++ b/index.html
@@ -13,18 +13,38 @@
 					<div class="left">好的生活，没那么贵</div>
 					<div class="right">
 						<ul>
-							<li><a href="#">登陆</a></li>
-							<li><a href="#">注册</a></li>
+							<li><a href="#" class="noborder">登陆</a></li>
+							<li><a href="#" class="noborder margin">注册</a></li>
 							<li><a href="#">我的订单</a></li>
 							<li><a href="#">会员</a></li>
 							<li><a href="#">甄选家</a></li>
 							<li><a href="#">企业采购</a></li>
-							<li><a href="#">客户服务</a></li>
-							<li><a href="#">APP</a></li>
+							<li class="customer">
+								<a href="#">客户服务</a>
+								<ul>
+									<li><a href="#">在线客服</a></li>
+									<li><a href="#">帮助中心</a></li>
+									<li class="phone">
+										<a href="#">电话客服</a>
+										<div>
+											<p>400-0368-163</p>
+											<p>9:00-22:00</p>
+										</div>
+									</li>
+									<li><a href="#">商务合作</a></li>
+									<li class="noborder"><a href="#">开放平台</a></li>
+								</ul>
+							</li>
+							<li class="down">
+								<a href="#">APP</a>
+								<div>
+									<img src="images/down.png"/>
+									<span>扫码下载 首单立减8元</span>
+								</div>
+							</li>
 						</ul>
 					</div>
 				</div>
-				
 			</div>
 		</header>
 	</body>
