--- a/index.html
+++ b/index.html
@@ -47,5 +47,16 @@
 				</div>
 			</div>
 		</header>
+		
+		<!--搜索栏-->
+		<div class="search">
+			<div class="center clearfix">
+				<h1><a href="http://you.163.com"><img src="images/logo.gif" alt="网易严选"/></a></h1>
+				<div class="searchBox">
+					<input type="text" value="超值囤货装买3免1" />
+					<a href="javascript:;"></a>
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
