--- a/index.html
+++ b/index.html
@@ -58,5 +58,38 @@
 				</div>
 			</div>
 		</div>
+		
+		<!--吸顶导航-->
+		<nav class="nav">
+			<div class="center clearfix">
+				<a href="javascript:;" class="log"><img src="images/smallLogo.gif"/></a>
+				<ul class="navbar">
+					<li><a href="#" class="active">首页</a></li>
+					<li><a href="#">居家</a></li>
+					<li><a href="#">配件</a></li>
+					<li><a href="#">服装</a></li>
+					<li><a href="#">电器</a></li>
+					<li><a href="#">洗护</a></li>
+					<li><a href="#">饮食</a></li>
+					<li><a href="#">餐厨</a></li>
+					<li><a href="#">婴童</a></li>
+					<li><a href="#">文体</a></li>
+					<li><a href="#">特色区</a></li>
+					<li class="separate">|</li>
+					<li><a href="#">为你严选</a></li>
+					<li><a href="#">众筹</a></li>
+					<div class="cartWrap">
+						
+					</div>
+					<div class="login">
+						<a href="#">登录</a>
+						<a href="#">注册</a>
+					</div>
+				</ul>
+			</div>
+			<div class="subnav">
+				
+			</div>
+		</nav>
 	</body>
 </html>
