购物车结构

--- a/index.html
+++ b/index.html
@@ -79,7 +79,59 @@
 					<li><a href="#">为你严选</a></li>
 					<li><a href="#">众筹</a></li>
 					<div class="cartWrap">
-						
+						<i>0</i>
+						<div class="cart">
+							<div class="list">
+								<ul>
+									<li>
+										<a href="#"><img src="images/img_01-1.png"/></a>
+										<div class="message">
+											<p><a href="#">领尖扣商务免烫衬衫</a></p>
+											<span>白色 Lx 1</span>
+										</div>
+										<div class="price">￥219.00</div>
+										<div class="close">×</div>
+									</li>
+									<li>
+										<a href="#"><img src="images/img_01-1.png"/></a>
+										<div class="message">
+											<p><a href="#">领尖扣商务免烫衬衫</a></p>
+											<span>白色 Lx 1</span>
+										</div>
+										<div class="price">￥219.00</div>
+										<div class="close">×</div>
+									</li>
+									<li>
+										<a href="#"><img src="images/img_01-1.png"/></a>
+										<div class="message">
+											<p><a href="#">领尖扣商务免烫衬衫</a></p>
+											<span>白色 Lx 1</span>
+										</div>
+										<div class="price">￥219.00</div>
+										<div class="close">×</div>
+									</li>
+									<li>
+										<a href="#"><img src="images/img_01-1.png"/></a>
+										<div class="message">
+											<p><a href="#">领尖扣商务免烫衬衫</a></p>
+											<span>白色 Lx 1</span>
+										</div>
+										<div class="price">￥219.00</div>
+										<div class="close">×</div>
+									</li>
+								</ul>
+								<div class="scrollBar">
+									<span class="topBtn"></span>
+									<div class="slideWrap">
+										<div class="slide"></div>
+									</div>
+									<span class="bottomBtn"></span>
+								</div>
+							</div>
+							<div class="total">
+								商品合计：<span>￥751.00</span><a href="#">去购物车结算</a>
+							</div>
+						</div>
 					</div>
 					<div class="login">
 						<a href="#">登录</a>
@@ -88,7 +140,116 @@
 				</ul>
 			</div>
 			<div class="subnav">
-				
+				<ul>
+					<li><a href="#"><img src="images/nav_01.png"/></a>1被枕</li>
+					<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
+					<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
+					<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
+					<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
+					<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
+					<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
+					<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
+				</ul>
+				<ul>
+					<li><a href="#"><img src="images/nav_01.png"/></a>2被枕</li>
+					<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
+					<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
+					<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
+					<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
+					<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
+					<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
+					<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
+				</ul>
+				<ul>
+					<li><a href="#"><img src="images/nav_01.png"/></a>3被枕</li>
+					<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
+					<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
+					<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
+					<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
+					<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
+					<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
+					<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
+				</ul>
+				<ul>
+					<li><a href="#"><img src="images/nav_01.png"/></a>4被枕</li>
+					<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
+					<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
+					<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
+					<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
+					<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
+					<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
+					<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
+				</ul>
+				<ul>
+					<li><a href="#"><img src="images/nav_01.png"/></a>5被枕</li>
+					<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
+					<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
+					<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
+					<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
+					<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
+					<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
+					<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
+				</ul>
+				<ul>
+					<li><a href="#"><img src="images/nav_01.png"/></a>6被枕</li>
+					<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
+					<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
+					<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
+					<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
+					<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
+					<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
+					<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
+				</ul>
+				<ul>
+					<li><a href="#"><img src="images/nav_01.png"/></a>7被枕</li>
+					<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
+					<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
+					<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
+					<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
+					<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
+					<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
+					<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
+				</ul>
+				<ul>
+					<li><a href="#"><img src="images/nav_01.png"/></a>8被枕</li>
+					<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
+					<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
+					<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
+					<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
+					<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
+					<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
+					<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
+				</ul>
+				<ul>
+					<li><a href="#"><img src="images/nav_01.png"/></a>9被枕</li>
+					<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
+					<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
+					<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
+					<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
+					<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
+					<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
+					<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
+				</ul>
+				<ul>
+					<li><a href="#"><img src="images/nav_01.png"/></a>10被枕</li>
+					<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
+					<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
+					<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
+					<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
+					<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
+					<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
+					<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
+				</ul>
+				<ul>
+					<li><a href="#"><img src="images/nav_01.png"/></a>11被枕</li>
+					<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
+					<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
+					<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
+					<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
+					<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
+					<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
+					<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
+				</ul>
 			</div>
 		</nav>
 	</body>
