添加购物车-subnav样式

--- a/index.html
+++ b/index.html
@@ -46,211 +46,213 @@
 					</div>
 				</div>
 			</div>
-		</header>
-		
-		<!--搜索栏-->
-		<div class="search">
-			<div class="center clearfix">
-				<h1><a href="http://you.163.com"><img src="images/logo.gif" alt="网易严选"/></a></h1>
-				<div class="searchBox">
-					<input type="text" value="超值囤货装买3免1" />
-					<a href="javascript:;"></a>
+			
+			<!--搜索栏-->
+			<div class="search">
+				<div class="center clearfix">
+					<h1><a href="http://you.163.com"><img src="images/logo.gif" alt="网易严选"/></a></h1>
+					<div class="searchBox">
+						<input type="text" value="超值囤货装买3免1" />
+						<a href="javascript:;"></a>
+					</div>
 				</div>
 			</div>
-		</div>
-		
-		<!--吸顶导航-->
-		<nav class="nav">
-			<div class="center clearfix">
-				<a href="javascript:;" class="log"><img src="images/smallLogo.gif"/></a>
-				<ul class="navbar">
-					<li><a href="#" class="active">首页</a></li>
-					<li><a href="#">居家</a></li>
-					<li><a href="#">配件</a></li>
-					<li><a href="#">服装</a></li>
-					<li><a href="#">电器</a></li>
-					<li><a href="#">洗护</a></li>
-					<li><a href="#">饮食</a></li>
-					<li><a href="#">餐厨</a></li>
-					<li><a href="#">婴童</a></li>
-					<li><a href="#">文体</a></li>
-					<li><a href="#">特色区</a></li>
-					<li class="separate">|</li>
-					<li><a href="#">为你严选</a></li>
-					<li><a href="#">众筹</a></li>
-					<div class="cartWrap">
-						<i>0</i>
-						<div class="cart">
-							<div class="list">
-								<ul>
-									<li>
-										<a href="#"><img src="images/img_01-1.png"/></a>
-										<div class="message">
-											<p><a href="#">领尖扣商务免烫衬衫</a></p>
-											<span>白色 Lx 1</span>
+
+			<!--吸顶导航-->
+			<nav class="nav">
+				<div class="center clearfix">
+					<a href="javascript:;" class="logo"><img src="images/smallLogo.gif"/></a>
+					<ul class="navbar">
+						<li class="active"><a href="#">首页</a></li>
+						<li><a href="#">居家</a></li>
+						<li><a href="#">配件</a></li>
+						<li><a href="#">服装</a></li>
+						<li><a href="#">电器</a></li>
+						<li><a href="#">洗护</a></li>
+						<li><a href="#">饮食</a></li>
+						<li><a href="#">餐厨</a></li>
+						<li><a href="#">婴童</a></li>
+						<li><a href="#">文体</a></li>
+						<li><a href="#">特色区</a></li>
+						<li class="separate">|</li>
+						<li><a href="#">为你严选</a></li>
+						<li><a href="#">众筹</a></li>
+						<div class="cartWrap">
+							<i>0</i>
+							<div class="cart">
+								<div class="list">
+									<ul>
+										<li>
+											<a href="#"><img src="images/img_01-1.png"/></a>
+											<div class="message">
+												<p><a href="#">领尖扣商务免烫衬衫</a></p>
+												<span>白色 Lx 1</span>
+											</div>
+											<div class="price">￥219.00</div>
+											<div class="close">×</div>
+										</li>
+										<li>
+											<a href="#"><img src="images/img_01-1.png"/></a>
+											<div class="message">
+												<p><a href="#">领尖扣商务免烫衬衫</a></p>
+												<span>白色 Lx 1</span>
+											</div>
+											<div class="price">￥219.00</div>
+											<div class="close">×</div>
+										</li>
+										<li>
+											<a href="#"><img src="images/img_01-1.png"/></a>
+											<div class="message">
+												<p><a href="#">领尖扣商务免烫衬衫</a></p>
+												<span>白色 Lx 1</span>
+											</div>
+											<div class="price">￥219.00</div>
+											<div class="close">×</div>
+										</li>
+										<li>
+											<a href="#"><img src="images/img_01-1.png"/></a>
+											<div class="message">
+												<p><a href="#">领尖扣商务免烫衬衫</a></p>
+												<span>白色 Lx 1</span>
+											</div>
+											<div class="price">￥219.00</div>
+											<div class="close">×</div>
+										</li>
+									</ul>
+									<div class="scrollBar">
+										<span class="topBtn"></span>
+										<div class="slideWrap">
+											<div class="slide"></div>
 										</div>
-										<div class="price">￥219.00</div>
-										<div class="close">×</div>
-									</li>
-									<li>
-										<a href="#"><img src="images/img_01-1.png"/></a>
-										<div class="message">
-											<p><a href="#">领尖扣商务免烫衬衫</a></p>
-											<span>白色 Lx 1</span>
-										</div>
-										<div class="price">￥219.00</div>
-										<div class="close">×</div>
-									</li>
-									<li>
-										<a href="#"><img src="images/img_01-1.png"/></a>
-										<div class="message">
-											<p><a href="#">领尖扣商务免烫衬衫</a></p>
-											<span>白色 Lx 1</span>
-										</div>
-										<div class="price">￥219.00</div>
-										<div class="close">×</div>
-									</li>
-									<li>
-										<a href="#"><img src="images/img_01-1.png"/></a>
-										<div class="message">
-											<p><a href="#">领尖扣商务免烫衬衫</a></p>
-											<span>白色 Lx 1</span>
-										</div>
-										<div class="price">￥219.00</div>
-										<div class="close">×</div>
-									</li>
-								</ul>
-								<div class="scrollBar">
-									<span class="topBtn"></span>
-									<div class="slideWrap">
-										<div class="slide"></div>
+										<span class="bottomBtn"></span>
 									</div>
-									<span class="bottomBtn"></span>
+								</div>
+								<div class="total">
+									商品合计：<span>￥751.00</span><a href="#">去购物车结算</a>
 								</div>
 							</div>
-							<div class="total">
-								商品合计：<span>￥751.00</span><a href="#">去购物车结算</a>
-							</div>
 						</div>
-					</div>
-					<div class="login">
-						<a href="#">登录</a>
-						<a href="#">注册</a>
-					</div>
-				</ul>
-			</div>
-			<div class="subnav">
-				<ul>
-					<li><a href="#"><img src="images/nav_01.png"/></a>1被枕</li>
-					<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
-					<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
-					<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
-					<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
-					<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
-					<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
-					<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
-				</ul>
-				<ul>
-					<li><a href="#"><img src="images/nav_01.png"/></a>2被枕</li>
-					<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
-					<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
-					<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
-					<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
-					<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
-					<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
-					<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
-				</ul>
-				<ul>
-					<li><a href="#"><img src="images/nav_01.png"/></a>3被枕</li>
-					<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
-					<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
-					<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
-					<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
-					<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
-					<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
-					<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
-				</ul>
-				<ul>
-					<li><a href="#"><img src="images/nav_01.png"/></a>4被枕</li>
-					<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
-					<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
-					<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
-					<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
-					<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
-					<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
-					<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
-				</ul>
-				<ul>
-					<li><a href="#"><img src="images/nav_01.png"/></a>5被枕</li>
-					<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
-					<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
-					<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
-					<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
-					<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
-					<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
-					<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
-				</ul>
-				<ul>
-					<li><a href="#"><img src="images/nav_01.png"/></a>6被枕</li>
-					<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
-					<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
-					<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
-					<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
-					<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
-					<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
-					<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
-				</ul>
-				<ul>
-					<li><a href="#"><img src="images/nav_01.png"/></a>7被枕</li>
-					<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
-					<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
-					<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
-					<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
-					<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
-					<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
-					<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
-				</ul>
-				<ul>
-					<li><a href="#"><img src="images/nav_01.png"/></a>8被枕</li>
-					<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
-					<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
-					<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
-					<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
-					<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
-					<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
-					<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
-				</ul>
-				<ul>
-					<li><a href="#"><img src="images/nav_01.png"/></a>9被枕</li>
-					<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
-					<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
-					<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
-					<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
-					<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
-					<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
-					<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
-				</ul>
-				<ul>
-					<li><a href="#"><img src="images/nav_01.png"/></a>10被枕</li>
-					<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
-					<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
-					<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
-					<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
-					<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
-					<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
-					<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
-				</ul>
-				<ul>
-					<li><a href="#"><img src="images/nav_01.png"/></a>11被枕</li>
-					<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
-					<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
-					<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
-					<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
-					<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
-					<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
-					<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
-				</ul>
-			</div>
-		</nav>
+						<div class="login">
+							<a href="#">登录</a>
+							<a href="#">注册</a>
+						</div>
+					</ul>
+				</div>
+				<div class="subnav">
+					<ul style="display: block;">
+						<li><a href="#"><img src="images/nav_01.png"/></a>1被枕</li>
+						<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
+						<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
+						<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
+						<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
+						<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
+						<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
+						<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
+					</ul>
+					<ul>
+						<li><a href="#"><img src="images/nav_01.png"/></a>2被枕</li>
+						<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
+						<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
+						<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
+						<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
+						<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
+						<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
+						<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
+					</ul>
+					<ul>
+						<li><a href="#"><img src="images/nav_01.png"/></a>3被枕</li>
+						<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
+						<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
+						<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
+						<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
+						<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
+						<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
+						<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
+					</ul>
+					<ul>
+						<li><a href="#"><img src="images/nav_01.png"/></a>4被枕</li>
+						<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
+						<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
+						<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
+						<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
+						<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
+						<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
+						<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
+					</ul>
+					<ul>
+						<li><a href="#"><img src="images/nav_01.png"/></a>5被枕</li>
+						<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
+						<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
+						<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
+						<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
+						<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
+						<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
+						<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
+					</ul>
+					<ul>
+						<li><a href="#"><img src="images/nav_01.png"/></a>6被枕</li>
+						<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
+						<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
+						<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
+						<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
+						<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
+						<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
+						<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
+					</ul>
+					<ul>
+						<li><a href="#"><img src="images/nav_01.png"/></a>7被枕</li>
+						<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
+						<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
+						<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
+						<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
+						<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
+						<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
+						<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
+					</ul>
+					<ul>
+						<li><a href="#"><img src="images/nav_01.png"/></a>8被枕</li>
+						<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
+						<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
+						<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
+						<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
+						<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
+						<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
+						<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
+					</ul>
+					<ul>
+						<li><a href="#"><img src="images/nav_01.png"/></a>9被枕</li>
+						<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
+						<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
+						<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
+						<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
+						<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
+						<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
+						<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
+					</ul>
+					<ul>
+						<li><a href="#"><img src="images/nav_01.png"/></a>10被枕</li>
+						<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
+						<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
+						<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
+						<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
+						<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
+						<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
+						<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
+					</ul>
+					<ul>
+						<li><a href="#"><img src="images/nav_01.png"/></a>11被枕</li>
+						<li><a href="#"><img src="images/nav_02.png"/></a>床品件套</li>
+						<li><a href="#"><img src="images/nav_03.png"/></a>床垫</li>
+						<li><a href="#"><img src="images/nav_04.png"/></a>地垫</li>
+						<li><a href="#"><img src="images/nav_05.png"/></a>家具</li>
+						<li><a href="#"><img src="images/nav_06.png"/></a>舒坐</li>
+						<li><a href="#"><img src="images/nav_07.png"/></a>灯具</li>
+						<li><a href="#"><img src="images/nav_08.png"/></a>家饰</li>
+					</ul>
+				</div>
+			</nav>
+		</header>
+		
+
 	</body>
 </html>
