购物车弹出层样式1

--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
 						<div class="cartWrap">
 							<i>0</i>
 							<div class="cart">
-								<div class="list">
+								<div class="list clearfix">
 									<ul>
 										<li>
-											<a href="#"><img src="images/img_01-1.png"/></a>
+											<a href="#" class="img"><img src="images/img_01-1.png"/></a>
 											<div class="message">
 												<p><a href="#">领尖扣商务免烫衬衫</a></p>
 												<span>白色 Lx 1</span>
@@ -92,7 +92,7 @@
 											<div class="close">×</div>
 										</li>
 										<li>
-											<a href="#"><img src="images/img_01-1.png"/></a>
+											<a href="#" class="img"><img src="images/img_01-1.png"/></a>
 											<div class="message">
 												<p><a href="#">领尖扣商务免烫衬衫</a></p>
 												<span>白色 Lx 1</span>
@@ -101,7 +101,7 @@
 											<div class="close">×</div>
 										</li>
 										<li>
-											<a href="#"><img src="images/img_01-1.png"/></a>
+											<a href="#" class="img"><img src="images/img_01-1.png"/></a>
 											<div class="message">
 												<p><a href="#">领尖扣商务免烫衬衫</a></p>
 												<span>白色 Lx 1</span>
@@ -110,7 +110,7 @@
 											<div class="close">×</div>
 										</li>
 										<li>
-											<a href="#"><img src="images/img_01-1.png"/></a>
+											<a href="#" class="img"><img src="images/img_01-1.png"/></a>
 											<div class="message">
 												<p><a href="#">领尖扣商务免烫衬衫</a></p>
 												<span>白色 Lx 1</span>
