--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			</div>
 
 			<!--吸顶导航-->
-			<nav class="nav">
+			<nav class="nav" id="-navFix">
 				<div class="center clearfix">
 					<a href="javascript:;" class="logo"><img src="images/smallLogo.gif"/></a>
 					<ul class="navbar">
