--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<title></title>
 		<link rel="stylesheet" type="text/css" href="css/common.css"/>
+		<link rel="stylesheet" type="text/css" href="css/index.css"/>
 	</head>
 	<body>
 		<header id="head">
@@ -253,6 +254,26 @@
 			</nav>
 		</header>
 		
-
+	<!--banner-->
+	<div id="banner">
+		<div class="bannerPic" id="bannerPic">
+			<div class="carouselImgCon">
+				<a href="#"><img style="opacity: 1;" src="images/pic_01.jpg"/></a>
+				<a href="#"><img src="images/pic_02.jpg"/></a>
+				<a href="#"><img src="images/pic_03.jpg"/></a>
+				<a href="#"><img src="images/pic_04.jpg"/></a>
+				<a href="#"><img src="images/pic_05.jpg"/></a>
+			</div>
+			<div class="prev"><</div>
+			<div class="next">></div>
+			<div class="circle">
+				<span class="active"></span>
+				<span></span>
+				<span></span>
+				<span></span>
+				<span></span>
+			</div>
+		</div>
+	</div>
 	</body>
 </html>
