--- a/index.html
+++ b/index.html
@@ -275,5 +275,42 @@
 			</div>
 		</div>
 	</div>
+	
+	<!--品牌制造商-->
+	<section id="brand">
+		<header class="brandHead clearfix">
+			<div class="left">
+				<h3>品牌制造商</h3><span>工厂直达消费者，剔除品牌溢价</span>
+			</div>
+			<div class="right">
+				<a href="#">更多制造商 ></a>
+			</div>
+		</header>
+		<div class="bImg">
+			<div class="bBox">
+				<h4>辣鸡宝宝制造商</h4>
+				<span>12.9元起</span>
+				<a href="#" class="scaleImg"><img src="images/img_01.jpg"/></a>
+			</div>
+			<div class="bBox">
+				<h4>MUJI制造商</h4>
+				<span>12.9元起</span>
+				<a href="#" class="scaleImg"><img src="images/img_02.jpg"/></a>
+			</div>
+			<div class="bBox">
+				<div>
+					<h4>Adidas制造商</h4>
+					<span>49元起</span>
+					<a href="#" class="scaleImg"><img src="images/img_03.jpg"/></a>
+				</div>
+				<div>
+					<h4>内野制造商</h4>
+					<span>29元起</span>
+					<a href="#" class="scaleImg"><img src="images/img_04.jpg"/></a>
+				</div>
+			</div>
+			
+		</div>
+	</section>
 	</body>
 </html>
