新品首发结构

--- a/index.html
+++ b/index.html
@@ -254,63 +254,170 @@
 			</nav>
 		</header>
 		
-	<!--banner-->
-	<div id="banner">
-		<div class="bannerPic" id="bannerPic">
-			<div class="carouselImgCon">
-				<a href="#"><img style="opacity: 1;" src="images/pic_01.jpg"/></a>
-				<a href="#"><img src="images/pic_02.jpg"/></a>
-				<a href="#"><img src="images/pic_03.jpg"/></a>
-				<a href="#"><img src="images/pic_04.jpg"/></a>
-				<a href="#"><img src="images/pic_05.jpg"/></a>
-			</div>
-			<div class="prev"><</div>
-			<div class="next">></div>
-			<div class="circle">
-				<span class="active"></span>
-				<span></span>
-				<span></span>
-				<span></span>
-				<span></span>
+		<!--banner-->
+		<div id="banner">
+			<div class="bannerPic" id="bannerPic">
+				<div class="carouselImgCon">
+					<a href="#"><img style="opacity: 1;" src="images/pic_01.jpg"/></a>
+					<a href="#"><img src="images/pic_02.jpg"/></a>
+					<a href="#"><img src="images/pic_03.jpg"/></a>
+					<a href="#"><img src="images/pic_04.jpg"/></a>
+					<a href="#"><img src="images/pic_05.jpg"/></a>
+				</div>
+				<div class="prev"><</div>
+				<div class="next">></div>
+				<div class="circle">
+					<span class="active"></span>
+					<span></span>
+					<span></span>
+					<span></span>
+					<span></span>
+				</div>
 			</div>
 		</div>
-	</div>
+		
+		<!--品牌制造商-->
+		<section id="brand">
+			<header class="brandHead clearfix">
+				<div class="left">
+					<h3>品牌制造商</h3><span>工厂直达消费者，剔除品牌溢价</span>
+				</div>
+				<div class="right">
+					<a href="#">更多制造商 ></a>
+				</div>
+			</header>
+			<div class="bImg">
+				<div class="bBox">
+					<h4>MUJI制造商</h4>
+					<span>12.9元起</span>
+					<a href="#" class="scaleImg"><img src="images/img_01.jpg"/></a>
+				</div>
+				<div class="bBox">
+					<h4>新秀丽制造商</h4>
+					<span>12.9元起</span>
+					<a href="#" class="scaleImg"><img src="images/img_02.jpg"/></a>
+				</div>
+				<div class="bBox">
+					<div>
+						<h4>Adidas制造商</h4>
+						<span>49元起</span>
+						<a href="#" class="scaleImg"><img src="images/img_03.jpg"/></a>
+					</div>
+					<div>
+						<h4>内野制造商</h4>
+						<span>29元起</span>
+						<a href="#" class="scaleImg"><img src="images/img_04.jpg"/></a>
+					</div>
+				</div>
+			</div>
+		</section>
 	
-	<!--品牌制造商-->
-	<section id="brand">
-		<header class="brandHead clearfix">
-			<div class="left">
-				<h3>品牌制造商</h3><span>工厂直达消费者，剔除品牌溢价</span>
-			</div>
-			<div class="right">
-				<a href="#">更多制造商 ></a>
-			</div>
-		</header>
-		<div class="bImg">
-			<div class="bBox">
-				<h4>辣鸡宝宝制造商</h4>
-				<span>12.9元起</span>
-				<a href="#" class="scaleImg"><img src="images/img_01.jpg"/></a>
-			</div>
-			<div class="bBox">
-				<h4>MUJI制造商</h4>
-				<span>12.9元起</span>
-				<a href="#" class="scaleImg"><img src="images/img_02.jpg"/></a>
-			</div>
-			<div class="bBox">
-				<div>
-					<h4>Adidas制造商</h4>
-					<span>49元起</span>
-					<a href="#" class="scaleImg"><img src="images/img_03.jpg"/></a>
+		<!--新品首发-->
+		<section id="new">
+			<header class="brandHead clearfix">
+				<div class="left">
+					<h3>新品首发</h3><span>为你寻觅世间好物</span>
 				</div>
-				<div>
-					<h4>内野制造商</h4>
-					<span>29元起</span>
-					<a href="#" class="scaleImg"><img src="images/img_04.jpg"/></a>
+				<div class="right">
+					<a href="#">更多新品 ></a>
 				</div>
+			</header>
+			<div class="content" id="newProduct">
+				<div class="carouselImgCon">
+					<ul class="clearfix">
+						<li>
+							<span class="colorNum">2色可选</span>
+							<a href="#">
+								<img src="images/img_05.png"/>
+								<img src="images/img_05.jpg"/>
+							</a>
+							<div class="title">
+								<a href="#">网易智造减压眼部按摩仪</a>
+								<p>￥449</p>
+							</div>
+						</li>
+						<li>
+							<span class="colorNum">3色可选</span>
+							<a href="#">
+								<img src="images/img_06.png"/>
+								<img src="images/img_06.jpg"/>
+							</a>
+							<div class="title">
+								<a href="#"> 唤自然·棉麻透气夏凉被</a>
+								<p>￥319</p>
+							</div>
+						</li>
+						<li>
+							<span class="colorNum">2色可选</span>
+							<a href="#">
+								<img src="images/img_07.png"/>
+								<img src="images/img_07.jpg"/>
+							</a>
+							<div class="title">
+								<a href="#"> 林音系列实木床</a>
+								<p>￥319</p>
+							</div>
+						</li>
+						<li>
+							<span class="colorNum">4色可选</span>
+							<a href="#">
+								<img src="images/img_08.png"/>
+								<img src="images/img_08.jpg"/>
+							</a>
+							<div class="title">
+								<a href="#"> 新色 奢华植鞣头层水牛皮席三件套</a>
+								<p>￥2499</p>
+							</div>
+						</li>
+						<li>
+							<span class="colorNum">2色可选</span>
+							<a href="#">
+								<img src="images/img_09.png"/>
+								<img src="images/img_09.jpg"/>
+							</a>
+							<div class="title">
+								<a href="#"> 日式咖喱 150克</a>
+								<p>￥15</p>
+							</div>
+						</li>
+						<li>
+							<span class="colorNum">2色可选</span>
+							<a href="#">
+								<img src="images/img_10.png"/>
+								<img src="images/img_10.jpg"/>
+							</a>
+							<div class="title">
+								<a href="#"> 有机皇菊 0.6克*20朵</a>
+								<p>￥129</p>
+							</div>
+						</li>
+						<li>
+							<span class="colorNum">2色可选</span>
+							<a href="#">
+								<img src="images/img_11.png"/>
+								<img src="images/img_11.jpg"/>
+							</a>
+							<div class="title">
+								<a href="#"> 可裸睡纯棉便携睡袋</a>
+								<p>￥449</p>
+							</div>
+						</li>
+						<li>
+							<span class="colorNum">2色可选</span>
+							<a href="#">
+								<img src="images/img_12.png"/>
+								<img src="images/img_12.jpg"/>
+							</a>
+							<div class="title">
+								<a href="#"> 舒压奢享按摩椅</a>
+								<p>￥7449</p>
+							</div>
+						</li>
+					</ul>
+				</div>
+				<div class="prev"><</div>
+				<div class="next">></div>
 			</div>
-			
-		</div>
-	</section>
+		</section>
 	</body>
 </html>
